SV-31 fixed tabs width bug on small screen

--- a/blocks/n-clobl/g-tab/g-tab_sber.scss
+++ b/blocks/n-clobl/g-tab/g-tab_sber.scss
@@ -9,7 +9,7 @@
     position: relative;
     font-family: SFUIDisplay;
 
-    width: 35%;
+    width: 20%;
     height: 32px;
 
     letter-spacing: 1.1px;
